--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DailyRoutineTasks">
-        <activity android:name=".Habits"
+        <activity android:name=".HabitsActivity"
             android:label="@string/title_activity_habits"
             android:parentActivityName=".MainActivity"/>
-        <activity android:name=".DefaultTasks"
+        <activity android:name=".DefaultTasksActivity"
             android:label="@string/title_activity_default_tasks"
             android:parentActivityName=".MainActivity"/>
         <activity
