--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -21,6 +22,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/daily_routine_tasks_widget_info" />
         </receiver>
+        <receiver android:name=".StartBackgroundService">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".BackgroundService"/>
 
         <activity
             android:name=".DefaultTasksActivity"
@@ -39,12 +48,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".StartBackgroundService">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-            </intent-filter>
-        </receiver>
+
     </application>
 
 </manifest>
