--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/daily_routine_tasks_widget_info" />
         </receiver>
+
+        <receiver android:name=".DisplayNotification" />
+        <receiver android:name=".GenerateNotification" />
+
+
         <receiver android:name=".StartBackgroundService">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -30,6 +35,10 @@
         </receiver>
 
         <service android:name=".BackgroundService"/>
+
+
+
+
 
         <activity
             android:name=".DefaultTasksActivity"
@@ -43,7 +52,6 @@
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
