--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +24,7 @@
                 android:resource="@xml/daily_routine_tasks_widget_info" />
         </receiver>
 
-        <receiver android:name=".DisplayNotification" />
+        <receiver android:name=".DisplayNotification"/>
         <receiver android:name=".GenerateNotification" />
 
 
