start after restart devices (nor wortking properly)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
         </receiver>
 
         <receiver android:name=".DisplayNotification"/>
-        <receiver android:name=".GenerateNotification" />
+        <receiver android:name=".GenerateNotification">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
 
 
         <receiver android:name=".StartBackgroundService">
